<resources>
    <string name="app_name">Weather</string>
    <string name="city_name">City Name</string>
    <string name="time_now">Time Now</string>
    <string name="error_while_updating">Error while updating</string>
    <string name="searchcity">SearchCity</string>
    <string name="amman">Amman</string>
    <string name="humidity">Humidity</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="weather_pictures">weather_pictures</string>
    <string name="bilgi2">:bilgi2</string>
    <string name="bilgi3">:bilgi3</string>
    <string name="bilgi4">:bilgi4</string>
    <string name="bilgi1">:bilgi1</string>
    <string name="_0c">0C</string>
    <string name="last_update">Last Update</string>
    <string name="date">Date</string>
    <string name="weather_desc">weather Desc</string>
    <string name="visibility">visibility</string>
    <string name="network">Network Error please connect to Internet and try again</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="error_loading_new">Error Loading</string>
    <string name="show_progress" translatable="false">Show progress</string>
    <string name="show_content" translatable="false">Show content</string>
    <string name="show_error" translatable="false">Show error</string>
    <string name="show_empty" translatable="false">Show empty</string>
    <string name="text_sample" translatable="false">Sample Text</string>
    <string name="sample_normal" translatable="false">Normal Sample</string>
    <string name="sample_recycler_view" translatable="false">RecyclerView Sample</string>
    <string name="try_again" translatable="false">Try Again</string>
    <string name="empty">Content not found</string>

    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nisl enim, gravida vel enim et, eleifend pretium lectus. Cras ullamcorper a quam eu ultricies. Fusce facilisis mattis libero a blandit. Donec et pellentesque ligula. Nulla quis velit a dui mattis tempus sit amet commodo quam. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</string>
    <string name="Please_wait">Please wait</string>
    <string name="for_14_days">For 14 Days</string>
    <string name="for_tomorrow_hours">For Tomorrow Hours</string>

    <string-array name="numbers">
        <item>one</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>

    </string-array>
</resources>